# nixos-deploy-tool

./: .envrc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GOTCHAS.md  HEATMAP.md  Justfile  README.md  RELEASE.md  STRUCTURE.md  TESTS.md  UV2NIX.md  flake.nix  pyproject.toml  uv.lock.example
.github/workflows/: audit.yml  ci.yml  lint.yml  nix.yml  release.yml  test-integration.yml  test-unit.yml  typecheck.yml  vm-test.yml
docs/guides/: nixos-integration.md  quickstart.md
docs/reference/: ci.md  cli.md  module.md
nix/: boot-decrypt.nix  default.nix  home-module.nix  module.nix  vm-tests.nix
src/nixos_deploy_tool/: __main__.py  exceptions.py
src/nixos_deploy_tool/cli/: __init__.py  config_loader.py  context.py  logging.py  main.py
src/nixos_deploy_tool/core/: __init__.py  _base.py  age.py  flake.py  iso_builder.py  key_store.py  nix.py  nix_tool.py  nixos_anywhere.py  ssh.py  tailscale_api.py
src/nixos_deploy_tool/models/: __init__.py  config.py  result.py
tests/: conftest.py
tests/fixtures/: factories.py  mock_ssh.py  mocks.py
tests/integration/: test_cli_invocation.py
tests/nix_eval/: test_module_eval.py
tests/nixos/: basic.nix
tests/unit/: conftest.py  test_app_constructor.py  test_cli.py  test_commands.py  test_context.py  test_deploy.py  test_key_store.py  test_models.py  test_nix.py  test_nix_eval.py  test_nixos_anywhere.py  test_services.py  test_tui_base.py  test_tui_extra_coverage.py  test_tui_screens.py  test_tui_wizard.py  test_wizard_config_advanced.py  test_wizard_confirm.py  test_wizard_deploy_advanced.py  test_wizard_disks_advanced.py  test_wizard_host_advanced.py  test_wizard_manual_advanced.py  test_wizard_partitions_advanced.py  test_wizard_state.py
tests/utils/: assertions.py  builders.py
(+43 files in other folders)
