[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nixos-deploy-tool"
dynamic = ["version"]
description = "CLI/TUI for building NixOS live ISOs, managing secrets, and deploying via nixos-anywhere"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["nixos", "deploy", "iso", "tailscale", "agenix"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "textual[syntax]>=0.70",
    "pydantic>=2.7",
    "rich>=13",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
nixos-deploy = "nixos_deploy_tool.cli.main:app"

[tool.hatch.version]
path = "src/nixos_deploy_tool/__init__.py"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "mypy>=1.10",
    "ruff>=0.4",
    "pip-audit>=2.6",
    "bandit>=1.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["nixos_deploy_tool"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["I"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "nix: requires nix in PATH (skip with -m 'not nix')",
    "integration: CLI subprocess tests",
    "tui: Textual TUI screen tests (requires textual)",
]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.paths]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
